# Low-latency-online-game-library

./: CMakeLists.txt  ClientTCP.cpp  ClientTCP.h  Message.cpp  Message.h  ServerTCP.cpp  ServerTCP.h  client.cpp  library.cpp  library.h  main.cpp  server.cpp
TCP/: ClientTCP.cpp  ClientTCP.h  ServerTCP.cpp  ServerTCP.h
lib/: CMakeLists.txt  Message.cpp
lib/TCP/: ClientTCP.cpp  ServerTCP.cpp  ServerTCP.h
lib/UDP/: ClientUDP.cpp  ClientUDP.h
tests/: CMakeLists.txt  testInit.cpp  testSend.cpp
